// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`.alike suffix in a list 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { prepareList, createComponent, withKey } = helpers;
  const comp1 = createComponent(app, \`Todo\`, true, false, false, ["todo"]);
  
  return function template(ctx, node, key = "") {
    const ctx1 = ctx;
    const [k_block1, v_block1, l_block1, c_block1] = prepareList(ctx['this'].state.elems);;
    for (let i1 = 0; i1 < l_block1; i1++) {
      let ctx = Object.create(ctx1);
      ctx[\`elem\`] = k_block1[i1];
      const key1 = ctx['elem'].id;
      c_block1[i1] = withKey(comp1({todo: ctx['elem'],toggle: ()=>ctx['this'].toggle(ctx['elem'].id)}, key + \`__1__\${key1}\`, node, this, null), key1);
    }
    return list(c_block1);
  }
}"
`;

exports[`.alike suffix in a list 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { callHandler, safeOutput } = helpers;
  const hdlr_fn1 = (ctx, ev) => callHandler(ctx['this'].props.toggle, ctx, ev);
  
  let block1 = createBlock(\`<button block-handler-0="click"><block-child-0/><block-child-1/></button>\`);
  
  return function template(ctx, node, key = "") {
    let b2, b3;
    let hdlr1 = [hdlr_fn1, ctx];
    b2 = safeOutput(ctx['this'].props.todo.id);
    if (ctx['this'].props.todo.isChecked) {
      b3 = text(\`V\`);
    }
    return block1([hdlr1], [b2, b3]);
  }
}"
`;

exports[`.alike suffix in a simple case 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput, createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, []);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].state.counter);
    const b3 = comp1({fn: ()=>1}, key + \`__1\`, node, this, null);
    return multi([b2, b3]);
  }
}"
`;

exports[`.alike suffix in a simple case 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  return function template(ctx, node, key = "") {
    return safeOutput(ctx['this'].props.fn());
  }
}"
`;

exports[`.translate props are translated 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, []);
  
  return function template(ctx, node, key = "") {
    return comp1({message: \`translated message\`}, key + \`__1\`, node, this, null);
  }
}"
`;

exports[`.translate props are translated 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  return function template(ctx, node, key = "") {
    return safeOutput(ctx['this'].props.message);
  }
}"
`;

exports[`arrow function props auto-skip re-render when captured variables don't change 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput, createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, []);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].state.counter);
    const b3 = comp1({fn: ()=>1}, key + \`__1\`, node, this, null);
    return multi([b2, b3]);
  }
}"
`;

exports[`arrow function props auto-skip re-render when captured variables don't change 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  return function template(ctx, node, key = "") {
    return safeOutput(ctx['this'].props.fn());
  }
}"
`;

exports[`arrow function props re-render when captured variable changes 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { prepareList, createComponent, withKey } = helpers;
  const comp1 = createComponent(app, \`Todo\`, true, false, false, ["todo","toggle.elem"]);
  
  return function template(ctx, node, key = "") {
    const ctx1 = ctx;
    const [k_block1, v_block1, l_block1, c_block1] = prepareList(ctx['this'].state.elems);;
    for (let i1 = 0; i1 < l_block1; i1++) {
      let ctx = Object.create(ctx1);
      ctx[\`elem\`] = k_block1[i1];
      const key1 = ctx['elem'].id;
      c_block1[i1] = withKey(comp1({todo: ctx['elem'],toggle: ()=>ctx['this'].toggle(ctx['elem'].id),"toggle.elem": ctx['elem']}, key + \`__1__\${key1}\`, node, this, null), key1);
    }
    return list(c_block1);
  }
}"
`;

exports[`arrow function props re-render when captured variable changes 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { callHandler, safeOutput } = helpers;
  const hdlr_fn1 = (ctx, ev) => callHandler(ctx['this'].props.toggle, ctx, ev);
  
  let block1 = createBlock(\`<button block-handler-0="click"><block-child-0/><block-child-1/></button>\`);
  
  return function template(ctx, node, key = "") {
    let b2, b3;
    let hdlr1 = [hdlr_fn1, ctx];
    b2 = safeOutput(ctx['this'].props.todo.id);
    if (ctx['this'].props.todo.isChecked) {
      b3 = text(\`V\`);
    }
    return block1([hdlr1], [b2, b3]);
  }
}"
`;

exports[`basics > accept ES6-like syntax for props (with getters) 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["greetings"]);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = comp1({greetings: ctx['this'].greetings}, key + \`__1\`, node, this, null);
    return block1([], [b2]);
  }
}"
`;

exports[`basics > accept ES6-like syntax for props (with getters) 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.greetings);
    return block1([], [b2]);
  }
}"
`;

exports[`basics > arrow function props do not leak synthetic keys into props() 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { prepareList, createComponent, withKey } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["onClick.item"]);
  
  return function template(ctx, node, key = "") {
    const ctx1 = ctx;
    const [k_block1, v_block1, l_block1, c_block1] = prepareList(ctx['this'].items);;
    for (let i1 = 0; i1 < l_block1; i1++) {
      let ctx = Object.create(ctx1);
      ctx[\`item\`] = k_block1[i1];
      const key1 = ctx['item'].val;
      c_block1[i1] = withKey(comp1({onClick: (_ev)=>ctx['this'].onClick(ctx['item'].val,_ev),"onClick.item": ctx['item']}, key + \`__1__\${key1}\`, node, this, null), key1);
    }
    return list(c_block1);
  }
}"
`;

exports[`basics > arrow function props do not leak synthetic keys into props() 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.onClick);
    return block1([], [b2]);
  }
}"
`;

exports[`basics > arrow functions as prop correctly capture their scope 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { prepareList, createComponent, withKey } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["onClick.item"]);
  
  return function template(ctx, node, key = "") {
    const ctx1 = ctx;
    const [k_block1, v_block1, l_block1, c_block1] = prepareList(ctx['this'].items);;
    for (let i1 = 0; i1 < l_block1; i1++) {
      let ctx = Object.create(ctx1);
      ctx[\`item\`] = k_block1[i1];
      const key1 = ctx['item'].val;
      c_block1[i1] = withKey(comp1({onClick: (_ev)=>ctx['this'].onClick(ctx['item'].val,_ev),"onClick.item": ctx['item']}, key + \`__1__\${key1}\`, node, this, null), key1);
    }
    return list(c_block1);
  }
}"
`;

exports[`basics > arrow functions as prop correctly capture their scope 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { callHandler } = helpers;
  const hdlr_fn1 = (ctx, ev) => callHandler(ctx['this'].props.onClick, ctx, ev);
  
  let block1 = createBlock(\`<button block-handler-0="click"/>\`);
  
  return function template(ctx, node, key = "") {
    let hdlr1 = [hdlr_fn1, ctx];
    return block1([hdlr1]);
  }
}"
`;

exports[`basics > explicit object prop 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["value"]);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = comp1({value: ctx['this'].state.val}, key + \`__1\`, node, this, null);
    return block1([], [b2]);
  }
}"
`;

exports[`basics > explicit object prop 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].state.someval);
    return block1([], [b2]);
  }
}"
`;

exports[`basics > prop names can contain - 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["prop-name"]);
  
  return function template(ctx, node, key = "") {
    return comp1({'prop-name': 7}, key + \`__1\`, node, this, null);
  }
}"
`;

exports[`basics > prop names can contain - 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props['prop-name']);
    return block1([], [b2]);
  }
}"
`;

exports[`basics > support prop names that aren't valid bare object property names 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["some-dashed-prop"]);
  
  return function template(ctx, node, key = "") {
    return comp1({'some-dashed-prop': 5}, key + \`__1\`, node, this, null);
  }
}"
`;

exports[`basics > support prop names that aren't valid bare object property names 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { callHandler } = helpers;
  const hdlr_fn1 = (ctx, ev) => callHandler(ctx['this'].props.onClick, ctx, ev);
  
  let block1 = createBlock(\`<button block-handler-0="click"/>\`);
  
  return function template(ctx, node, key = "") {
    let hdlr1 = [hdlr_fn1, ctx];
    return block1([hdlr1]);
  }
}"
`;

exports[`basics > t-set with a body expression can be passed in props, and then t-out 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { LazyValue, withDefault, createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["val"]);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  let block2 = createBlock(\`<p>43</p>\`);
  
  function value1(ctx, node, key = "") {
    return block2();
  }
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx[\`abc\`] = new LazyValue(value1, ctx, this, node, key);
    const b3 = comp1({val: ctx['abc']}, key + \`__1\`, node, this, null);
    return block1([], [b3]);
  }
}"
`;

exports[`basics > t-set with a body expression can be passed in props, and then t-out 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.val);
    return block1([], [b2]);
  }
}"
`;

exports[`basics > t-set with a body expression can be used as textual prop 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["val"]);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["abc"] = \`42\`;
    const b2 = comp1({val: ctx['abc']}, key + \`__1\`, node, this, null);
    return block1([], [b2]);
  }
}"
`;

exports[`basics > t-set with a body expression can be used as textual prop 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.val);
    return block1([], [b2]);
  }
}"
`;

exports[`basics > t-set works  1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["val"]);
  
  let block1 = createBlock(\`<div><block-child-0/></div>\`);
  
  return function template(ctx, node, key = "") {
    ctx = Object.create(ctx);
    ctx["val"] = 42;
    const b2 = comp1({val: ctx['val']}, key + \`__1\`, node, this, null);
    return block1([], [b2]);
  }
}"
`;

exports[`basics > t-set works  2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  let block1 = createBlock(\`<span><block-child-0/></span>\`);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.val);
    return block1([], [b2]);
  }
}"
`;

exports[`basics > template string in prop 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["propName"]);
  
  return function template(ctx, node, key = "") {
    return comp1({propName: \`1\${ctx['this'].someVal}3\`}, key + \`__1\`, node, this, null);
  }
}"
`;

exports[`basics > template string in prop 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  return function template(ctx, node, key = "") {
    return text(\`\`);
  }
}"
`;

exports[`bound functions are considered 'alike' 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput, createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, []);
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].state.val);
    const b3 = comp1({fn: (ctx['this'].someFunction).bind(this)}, key + \`__1\`, node, this, null);
    return multi([b2, b3]);
  }
}"
`;

exports[`bound functions are considered 'alike' 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  return function template(ctx, node, key = "") {
    return text(\`child\`);
  }
}"
`;

exports[`bound functions is not referentially equal after update 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["val"]);
  
  return function template(ctx, node, key = "") {
    return comp1({val: ctx['this'].state.val,fn: (ctx['this'].someFunction).bind(this)}, key + \`__1\`, node, this, null);
  }
}"
`;

exports[`bound functions is not referentially equal after update 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  return function template(ctx, node, key = "") {
    return safeOutput(ctx['this'].props.val);
  }
}"
`;

exports[`can bind function prop with bind suffix 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, []);
  
  return function template(ctx, node, key = "") {
    return comp1({doSomething: (ctx['this'].doSomething).bind(this)}, key + \`__1\`, node, this, null);
  }
}"
`;

exports[`can bind function prop with bind suffix 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  return function template(ctx, node, key = "") {
    return text(\`child\`);
  }
}"
`;

exports[`can use .translate suffix 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, []);
  
  return function template(ctx, node, key = "") {
    return comp1({message: \`some message\`}, key + \`__1\`, node, this, null);
  }
}"
`;

exports[`can use .translate suffix 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  return function template(ctx, node, key = "") {
    return safeOutput(ctx['this'].props.message);
  }
}"
`;

exports[`do not crash when binding anonymous function prop with bind suffix 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, []);
  
  return function template(ctx, node, key = "") {
    return comp1({doSomething: ((_val)=>ctx['this'].doSomething(_val)).bind(this)}, key + \`__1\`, node, this, null);
  }
}"
`;

exports[`do not crash when binding anonymous function prop with bind suffix 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  
  return function template(ctx, node, key = "") {
    return text(\`child\`);
  }
}"
`;

exports[`no props validation and default props 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { createComponent } = helpers;
  const comp1 = createComponent(app, \`Child\`, true, false, false, ["height","width"]);
  
  return function template(ctx, node, key = "") {
    return comp1({height: ctx['this'].height(),width: ctx['this'].width()}, key + \`__1\`, node, this, null);
  }
}"
`;

exports[`no props validation and default props 2`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler } = bdom;
  let { safeOutput } = helpers;
  
  return function template(ctx, node, key = "") {
    const b2 = safeOutput(ctx['this'].props.width);
    const b3 = text(\` / \`);
    const b4 = safeOutput(ctx['this'].props.height);
    return multi([b2, b3, b4]);
  }
}"
`;
